--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://3gimg.qq.com/lightmap/components/geolocation/geolocation.min.js "></script>
+  <script src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 </html>
