--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>zaijia</title>
+    <!--<script src="http://eruda.liriliri.io/eruda.min.js"></script>-->
+    <!--<script>eruda.init()</script>-->
   </head>
   <body>
     <div id="app"></div>
